rewrite comment-list component to be generic and reusable

--- a/client/src/app/components/shared/comment-list/comment-list.component.html
+++ b/client/src/app/components/shared/comment-list/comment-list.component.html
@@ -1,20 +1,57 @@
-<nz-card nzTitle="Comments">
-  <nz-list [nzDataSource]="commentsService.comments$ | ngrxPush"
-    [nzLoading]="commentsService.isLoading$ | ngrxPush"
-    [nzRenderItem]="comment"
-    nzSize="small"
-    nzItemLayout="horizontal">
-    <nz-list-header *ngrxLet="commentsService.pageInfo$ as pageInfo">
-      <div nz-list-load-more *ngIf="pageInfo.hasPreviousPage">
-        <button nz-button nzType="link" nzSize="small" nzBlock (click)="onLoadMore()">Load older comments</button>
-      </div>
-    </nz-list-header>
-    <ng-template #comment let-comment>
-      <nz-list-item>
-        <cvc-comment-display [comment]="comment.node"></cvc-comment-display>
-      </nz-list-item>
-    </ng-template>
-  </nz-list>
-  <cvc-comment-add id="addComment" *ngIf="viewer.canCurate$ | ngrxPush" [subject]="commentsService.subject"></cvc-comment-add>
-</nz-card>
-<ngx-json-viewer *ngIf="commentsService.comments$ | ngrxPush as comments" [json]="comments" ></ngx-json-viewer>
+<nz-row [nzGutter]="16">
+  <nz-col nzSpan="18">
+    <nz-card nzTitle="Comments">
+      <nz-list [nzDataSource]="comments$ | ngrxPush" [nzLoading]="loading$ | ngrxPush" [nzRenderItem]="comment"
+        nzSize="small" nzItemLayout="horizontal">
+        <nz-list-footer *ngIf="pageInfo$ | ngrxPush as pageInfo">
+          <div nz-list-load-more *ngIf="pageInfo.hasNextPage">
+            <button nz-button nzType="link" nzSize="small" nzBlock (click)="onLoadMore(pageInfo.endCursor)">Load older
+              comments</button>
+          </div>
+        </nz-list-footer>
+        <ng-template #comment let-comment>
+          <nz-list-item>
+            <cvc-comment-display [comment]="comment"></cvc-comment-display>
+          </nz-list-item>
+        </ng-template>
+      </nz-list>
+      <ng-container *ngIf="viewer$ | ngrxPush as viewer">
+        <cvc-comment-add id="addComment" *ngIf="viewer.canCurate" [subject]="commentable"></cvc-comment-add>
+      </ng-container>
+    </nz-card>
+  </nz-col>
+  <nz-col nzSpan="6">
+    <cvc-participant-list listTitle="Commenters" [participantList]="participants$ | ngrxPush"
+      (participantSelectedEvent)="onParticipantSelected($event)">
+      <ng-template #itemTemplate let-user>
+        <nz-avatar *ngIf="user.profileImagePath; else noAvatar" nz-comment-avatar [nzSrc]="user.profileImagePath">
+        </nz-avatar>
+        <ng-template #noAvatar>
+          <nz-avatar nz-comment-avatar [nzText]="user.displayName.charAt(0) | uppercase"></nz-avatar>
+        </ng-template>
+        <span>{{user.displayName}}</span>
+      </ng-template>
+    </cvc-participant-list>
+    <nz-card nzTitle="Curators Mentioned" nz-type="inner" style="margin-bottom: 1em">
+      <nz-space nzDirection="vertical" style="width: 100%">
+        <nz-space-item>
+          <nz-skeleton [nzAvatar]="true" [nzParagraph]="{ rows: 0 }"></nz-skeleton>
+        </nz-space-item>
+      </nz-space>
+    </nz-card>
+    <nz-card nzTitle="Entities Mentioned" nz-type="inner">
+      <nz-list nzDirection="vertical" style="width: 100%">
+        <nz-list-item>
+          <nz-skeleton [nzParagraph]="{ rows: 1 }"></nz-skeleton>
+        </nz-list-item>
+        <nz-list-item>
+          <nz-skeleton [nzParagraph]="{ rows: 1 }"></nz-skeleton>
+        </nz-list-item>
+        <nz-list-item>
+          <nz-skeleton [nzParagraph]="{ rows: 1 }"></nz-skeleton>
+        </nz-list-item>
+      </nz-list>
+    </nz-card>
+
+  </nz-col>
+</nz-row>
