--- a/client/src/app/components/shared/comment-display/comment-display.component.html
+++ b/client/src/app/components/shared/comment-display/comment-display.component.html
@@ -5,6 +5,7 @@
         <nz-avatar nz-comment-avatar nzIcon="civic:curator"></nz-avatar>
     </ng-template>
     <nz-comment-content>
+        {{ comment.id }}
         <p>{{ comment.comment }}</p>
     </nz-comment-content>
 </nz-comment>
