--- a/client/src/app/components/shared/variants-menu/variants-menu.component.html
+++ b/client/src/app/components/shared/variants-menu/variants-menu.component.html
@@ -11,7 +11,9 @@
             <div nz-col [nzSpan]="3" *ngFor="let v of variants">
                 <nz-list-item>
                     <nz-card>
-                        {{ v.name }}
+                        <a routerLink="/variants/{{v.id}}">
+                            {{ v.name }}
+                        </a>
                     </nz-card>
                 </nz-list-item>
             </div>
