add variant hovercard

--- a/client/src/app/components/shared/variants-menu/variants-menu.component.html
+++ b/client/src/app/components/shared/variants-menu/variants-menu.component.html
@@ -12,7 +12,7 @@
                 <nz-list-item>
                     <nz-card>
                         <a routerLink="/variants/{{v.id}}">
-                            {{ v.name }}
+                            <cvc-variant-pill [variant]="v"></cvc-variant-pill>
                         </a>
                     </nz-card>
                 </nz-list-item>
