add initial evidence grid table

--- a/client/src/app/views/variants/variants-summary/variants-summary.component.html
+++ b/client/src/app/views/variants/variants-summary/variants-summary.component.html
@@ -115,4 +115,7 @@
       </nz-col>
     </div>
   </nz-space-item>
+  <nz-space-item>
+    <cvc-evidence-browse [variantId]="variant.id"></cvc-evidence-browse>
+  </nz-space-item>
 </nz-space>
