--- a/client/src/app/views/evidence/evidence-browse/evidence-browse.component.html
+++ b/client/src/app/views/evidence/evidence-browse/evidence-browse.component.html
@@ -20,10 +20,10 @@
                 <th nzWidth="5%">
                   EID
                 </th>
-                <th nzWidth="25%">
+                <th nzWidth="20%">
                   Diseases
                 </th>
-                <th nzWidth="25%">
+                <th nzWidth="20%">
                   Drugs
                 </th>
                 <th nzWidth="5%">
@@ -32,16 +32,16 @@
                 <th nzWidth="5%">
                   Evidence Level
                 </th>
-                <th nzWidth="5%">
+                <th nzWidth="10%">
                   Evidence Type
                 </th>
-                <th nzWidth="5%">
+                <th nzWidth="10%">
                   Evidence Direction
                 </th>
-                <th nzWidth="5%">
+                <th nzWidth="10%">
                   Clinical Significance
                 </th>
-                <th nzWidth="5%">
+                <th nzWidth="10%">
                   Variant Origin
                 </th>
                 <th nzWidth="5%">
@@ -57,7 +57,7 @@
                     <i nz-icon class="ant-input-clear-icon" nzTheme="fill" nzType="close-circle" *ngIf="eidInput" (click)="eidInput = undefined; onModelChanged()"></i>
                   </ng-template>
                 </th>
-                <th nzWidth="25%">
+                <th>
                   <nz-input-group [nzSuffix]="diseaseInputClearTpl">
                     <input type="text" nz-input placeholder="Search Disease" [(ngModel)]="diseaseNameInput" (ngModelChange)="onModelChanged()" />
                   </nz-input-group>
@@ -65,7 +65,7 @@
                     <i nz-icon class="ant-input-clear-icon" nzTheme="fill" nzType="close-circle" *ngIf="diseaseNameInput" (click)="diseaseNameInput = undefined; onModelChanged()"></i>
                   </ng-template>
                 </th>
-                <th nzWidth="25%">
+                <th>
                   <nz-input-group [nzSuffix]="drugInputClearTpl">
                     <input type="text" nz-input placeholder="Search Drugs" [(ngModel)]="drugNameInput" (ngModelChange)="onModelChanged()" />
                   </nz-input-group>
@@ -73,7 +73,7 @@
                     <i nz-icon class="ant-input-clear-icon" nzTheme="fill" nzType="close-circle" *ngIf="drugNameInput" (click)="drugNameInput = undefined; onModelChanged()"></i>
                   </ng-template>
                 </th>
-                <th nzWidth="5%">
+                <th>
                   <nz-input-group [nzSuffix]="descriptionInputClearTpl">
                     <input type="text" nz-input placeholder="Search Drugs" [(ngModel)]="descriptionInput" (ngModelChange)="onModelChanged()" />
                   </nz-input-group>
@@ -81,23 +81,84 @@
                     <i nz-icon class="ant-input-clear-icon" nzTheme="fill" nzType="close-circle" *ngIf="descriptionInput" (click)="descriptionInput = undefined; onModelChanged()"></i>
                   </ng-template>
                 </th>
-                <th nzWidth="5%">
-                  Evidence Level
+                <th>
+                  <nz-select nzAllowClear nzPlaceHolder="Choose" (ngModelChange)="onModelChanged()" [(ngModel)]="evidenceLevelInput">
+                    <nz-option nzValue="A" nzLabel="A"></nz-option>
+                    <nz-option nzValue="B" nzLabel="B"></nz-option>
+                    <nz-option nzValue="C" nzLabel="C"></nz-option>
+                    <nz-option nzValue="D" nzLabel="D"></nz-option>
+                    <nz-option nzValue="E" nzLabel="E"></nz-option>
+                  </nz-select>
+                </th>
+                <th>
+                  <nz-select nzAllowClear nzPlaceHolder="Choose" (ngModelChange)="onModelChanged()" [(ngModel)]="evidenceTypeInput">
+                    <nz-option nzValue="PREDICTIVE" nzLabel="Predictive"></nz-option>
+                    <nz-option nzValue="PROGNOSTIC" nzLabel="Prognostic"></nz-option>
+                    <nz-option nzValue="DIAGNOSTIC" nzLabel="Diagnostic"></nz-option>
+                    <nz-option nzValue="PREDISPOSING" nzLabel="Predisposing"></nz-option>
+                    <nz-option nzValue="ONCOGENIC" nzLabel="Oncogenic"></nz-option>
+                    <nz-option nzValue="FUNCTIONAL" nzLabel="Functional"></nz-option>
+                  </nz-select>
+                </th>
+                <th>
+                  <nz-select nzAllowClear nzPlaceHolder="Choose" (ngModelChange)="onModelChanged()" [(ngModel)]="evidenceDirectionInput">
+                    <nz-option nzValue="SUPPORTS" nzLabel="Supports"></nz-option>
+                    <nz-option nzValue="DOES_NOT_SUPPORT" nzLabel="Does not Support"></nz-option>
+                    <nz-option nzValue="NA" nzLabel="N/A"></nz-option>
+                  </nz-select>
                 </th>
                 <th nzWidth="5%">
-                  Evidence Type
+                  <nz-select nzAllowClear nzPlaceHolder="Choose" (ngModelChange)="onModelChanged()" [(ngModel)]="clinicalSignificanceInput">
+                    <nz-option-group nzLabel="Predictive">
+                      <nz-option nzValue="SENSITIVITYRESPONSE" nzLabel="Sensitivity/Response"></nz-option>
+                      <nz-option nzValue="RESISTANCE" nzLabel="Resistance"></nz-option>
+                      <nz-option nzValue="ADVERSE_RESPONSE" nzLabel="Adverse Response"></nz-option>
+                      <nz-option nzValue="REDUCED SENSITIVITY" nzLabel="Reduced Sensitivity"></nz-option>
+                      <nz-option nzValue="NA" nzLabel="N/A"></nz-option>
+                    </nz-option-group>
+                    <nz-option-group nzLabel="Prognostic">
+                      <nz-option nzValue="BETTER_OUTCOME" nzLabel="Better Outcome"></nz-option>
+                      <nz-option nzValue="POOR_OUTCOME" nzLabel="Poor Outcome"></nz-option>
+                      <nz-option nzValue="NA" nzLabel="N/A"></nz-option>
+                    </nz-option-group>
+                    <nz-option-group nzLabel="Diagnostic">
+                      <nz-option nzValue="POSITIVE" nzLabel="Positive"></nz-option>
+                      <nz-option nzValue="NEGATIVE" nzLabel="Negative"></nz-option>
+                    </nz-option-group>
+                    <nz-option-group nzLabel="Predisposing">
+                      <nz-option nzValue="NA" nzLabel="N/A"></nz-option>
+                    </nz-option-group>
+                    <nz-option-group nzLabel="Oncogenic">
+                      <nz-option nzValue="NA" nzLabel="N/A"></nz-option>
+                    </nz-option-group>
+                    <nz-option-group nzLabel="Functional">
+                      <nz-option nzValue="GAIN_OF_FUNCTION" nzLabel="Gain of Function"></nz-option>,
+                      <nz-option nzValue="LOSS_OF_FUNCTION" nzLabel="Loss of Function"></nz-option>,
+                      <nz-option nzValue="UNALTERED_FUNCTION" nzLabel="Unaltered Function"></nz-option>,
+                      <nz-option nzValue="NEOMORPHIC" nzLabel="Neomorphic"></nz-option>,
+                      <nz-option nzValue="DOMINANT_NEGATIVE" nzLabel="Dominant Negative"></nz-option>,
+                      <nz-option nzValue="UNKNOWN" nzLabel="Unknown"></nz-option>
+                    </nz-option-group>
+                  </nz-select>
                 </th>
-                <th nzWidth="5%">
-                  Evidence Direction
+                <th>
+                  <nz-select nzAllowClear nzPlaceHolder="Choose" (ngModelChange)="onModelChanged()" [(ngModel)]="variantOriginInput">
+                    <nz-option nzValue="SOMATIC" nzLabel="Somatic"></nz-option>
+                    <nz-option nzValue="RARE_GERMLINE" nzLabel="Rare Germline"></nz-option>
+                    <nz-option nzValue="COMMON_GERMLINE" nzLabel="Common Germline"></nz-option>
+                    <nz-option nzValue="UNKNOWN" nzLabel="Unkown"></nz-option>
+                    <nz-option nzValue="NA" nzLabel="N/A"></nz-option>
+                    <nz-option nzValue="GERMLINE_OR_SOMATIC" nzLabel="Germline or Somatic"></nz-option>
+                  </nz-select>
                 </th>
-                <th nzWidth="5%">
-                  Clinical Significance
-                </th>
-                <th nzWidth="5%">
-                  Variant Origin
-                </th>
-                <th nzWidth="5%">
-                  Rating
+                <th>
+                  <nz-select nzAllowClear nzPlaceHolder="Choose" (ngModelChange)="onModelChanged()" [(ngModel)]="evidenceRatingInput">
+                    <nz-option [nzValue]="1" nzLabel="1"></nz-option>
+                    <nz-option [nzValue]="2" nzLabel="2"></nz-option>
+                    <nz-option [nzValue]="3" nzLabel="3"></nz-option>
+                    <nz-option [nzValue]="4" nzLabel="4"></nz-option>
+                    <nz-option [nzValue]="5" nzLabel="5"></nz-option>
+                  </nz-select>
                 </th>
               </tr>
             </thead>
