all new single, twotone and full color icons registered, working

--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -21,7 +21,7 @@
         nzTooltipPlacement="right"
         [nzTooltipTitle]="isCollapsed ? 'Assertions' : ''"
         nzSelected nzMatchRouter>
-        <i nz-icon nzType="civic-assertion" nzTheme="twotone"></i>
+        <i nz-icon nzType="civic-assertion"></i>
         <span>
           <a routerLink="/assertions" id="main-assertions">Assertions</a>
         </span>
@@ -57,7 +57,7 @@
         nzTooltipPlacement="right"
         [nzTooltipTitle]="isCollapsed ? 'Variant Groups' : ''"
         nzSelected nzMatchRouter>
-        <i nz-icon nzType="civic-variant-group"></i>
+        <i nz-icon nzType="civic-variantgroup"></i>
         <span>
           <a routerLink="/variant-groups" id="main-variant-groups">Variant Groups</a>
         </span>
