touched up lifecycle actions, tested out new icons

--- a/client/src/app/components/shared/lifecycle-actions/lifecycle-actions.component.html
+++ b/client/src/app/components/shared/lifecycle-actions/lifecycle-actions.component.html
@@ -1,13 +1,16 @@
 <nz-row>
   <nz-col nzSpan="24">
+    <strong>Last Revised</strong> by
     <nz-tag nzColor="blue">
-      <strong>Last Modified</strong> by <strong>LynzeyK</strong>
+      <i nz-icon nzType="civic-editor"></i>&nbsp;<strong>BobEditor</strong>
     </nz-tag>
-    <nz-tag nzColor="purple">
-      <strong>Last Comment by</strong> by <strong>mgriffith</strong>
+    <strong>Last Comment</strong> by
+    <nz-tag nzColor="blue">
+      <i nz-icon nzType="civic-curator"></i>&nbsp;<strong>AliceCurator</strong>
     </nz-tag>
-    <nz-tag nzColor="cyan">
-      <strong>Last Reviewed by</strong> by <strong>obigriffith</strong>
+    <strong>Last Reviewed</strong> by
+    <nz-tag nzColor="blue">
+      <i nz-icon nzType="civic-admin"></i>&nbsp;<strong>CarolAdmin</strong>
     </nz-tag>
   </nz-col>
 </nz-row>
