--- a/client/src/app/components/shared/lifecycle-actions/lifecycle-actions.component.less
+++ b/client/src/app/components/shared/lifecycle-actions/lifecycle-actions.component.less
@@ -4,6 +4,7 @@
   display: block;
   border-radius: .2em;
   background-color: @geekblue-1;
+  color: @blue-5;
   padding: .5em;
   margin-bottom: 1em;
 }
