--- a/client/src/app/views/assertions/assertions-summary/assertions-summary.component.html
+++ b/client/src/app/views/assertions/assertions-summary/assertions-summary.component.html
@@ -34,6 +34,14 @@
             </ng-container>
             <ng-container *ngIf="assertion.drugs.length > 1">{{ ' (' + assertion.drugInteractionType + ')' }}</ng-container>
         </nz-row>
+        <nz-row [ngPlural]="assertion.phenotypes.length">
+          <ng-template ngPluralCase="=0"><b>Associated Phenotype:&nbsp;</b> <i>-</i></ng-template>
+          <ng-template ngPluralCase="=1"><b>Associated Phenotype:&nbsp;</b></ng-template>
+          <ng-template ngPluralCase="other"><b>Associated Phenotypes:&nbsp;</b></ng-template>
+          <ng-container *ngFor="let p of assertion.phenotypes; let last = last">
+            {{ p.hpoClass }} <ng-container *ngIf="!last">,&nbsp;</ng-container>
+          </ng-container>
+        </nz-row>
         <nz-row *ngIf="assertion.ampLevel"><b>AMP/ASCO/CAP Category:&nbsp;</b>{{ assertion.ampLevel }}</nz-row>
         <nz-row *ngIf="assertion.acmgCodes.length > 0">
           <span *ngIf="assertion.acmgCodes.length === 1; else acmgElse"><b>ACMG Code:&nbsp;</b></span>
