Add evidence item page and hook up browse page

--- a/client/src/app/views/evidence/evidence-browse/evidence-browse.component.html
+++ b/client/src/app/views/evidence/evidence-browse/evidence-browse.component.html
@@ -145,7 +145,7 @@
             <tbody>
               <tr *ngFor="let eid of evidenceTable.data">
                 <td>
-                  {{ eid.id }}
+                  <a routerLink="/evidence/{{eid.id}}">{{eid.name}}</a>
                 </td>
                 <td>
                   <ng-container *ngIf="eid.disease.displayName; else diseaseElse">
