--- a/client/src/app/components/shared/variants-menu/variants-menu.component.less
+++ b/client/src/app/components/shared/variants-menu/variants-menu.component.less
@@ -2,7 +2,12 @@
   display: block;
 }
 
-#variantFilters {
+#variant-filters {
+
+  #name-filter-group {
+    width: 175px;
+  }
+
   nz-form-item:last-child {
     margin-right: 0;
   }
