Add assertion table to the evidence and variant summaries
This necessitated moving the assertion browse table to the shared module
since we would otherwise have a circular dependency between the evidence and
assertion modules.

--- a/client/src/app/views/evidence/evidence-summary/evidence-summary.component.html
+++ b/client/src/app/views/evidence/evidence-summary/evidence-summary.component.html
@@ -57,4 +57,7 @@
       </nz-col>
     </div>
   </nz-space-item>
+  <nz-space-item>
+    <cvc-assertions-browse [evidenceId]="evidence.id"></cvc-assertions-browse>
+  </nz-space-item>
 </nz-space>
