--- a/client/src/app/views/variants/variants-summary/variants-summary.component.html
+++ b/client/src/app/views/variants/variants-summary/variants-summary.component.html
@@ -118,4 +118,7 @@
   <nz-space-item>
     <cvc-evidence-browse [variantId]="variant.id"></cvc-evidence-browse>
   </nz-space-item>
+  <nz-space-item>
+    <cvc-assertions-browse [variantId]="variant.id"></cvc-assertions-browse>
+  </nz-space-item>
 </nz-space>
