--- a/client/src/app/components/variants/variant-pill/variant-pill.component.html
+++ b/client/src/app/components/variants/variant-pill/variant-pill.component.html
@@ -2,7 +2,7 @@
   nz-popover
   [nzPopoverMouseEnterDelay]="0.5"
   [nzPopoverContent]="popoverContent"
-  nzPopoverTrigger="click">
+  nzPopoverTrigger="hover">
   <i nz-icon
     nzType="civic-variant"></i> {{ variant.name }}
 </nz-tag>
